Fixed spacing on tweets

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -171,7 +171,6 @@
     margin-right: 1.5%;
     margin-bottom: 25px;
     display: inline-block;
-    float: left;
     padding-right: 10px;
   }
   
